--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,12 +35,11 @@
 	</div>
 
 	<footer class="l-footer l-row">
-		<h3>Links</h3>
 		<ul>
 			<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-			<li><a href="http://www.linkedin.com/in/johndjameson">LinkedIn</a></li>
 			<li><a href="http://codepen.io/johndjameson">CodePen</a></li>
 			<li><a href="http://dribbble.com">Dribbble</a></li>
+			<li><a href="/feed.xml">RSS</a></li>
 		</ul>
 	</footer>
 
