--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width">
+	<meta name="description" content="{{page.tagline}}">
 
 	<title>{{page.title}} | John D. Jameson </title>
 
 	<link rel="stylesheet" href="/css/application.css">
+	<link rel="author" href="https://plus.google.com/u/0/113914298266231922059/posts">
 
 	<script type="text/javascript" src="//use.typekit.net/yhp6wqr.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -35,7 +37,7 @@
 	</div>
 
 	<footer class="l-footer l-row">
-		<ul>
+		<ul class="inlineList">
 			<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
 			<li><a href="http://codepen.io/johndjameson">CodePen</a></li>
 			<li><a href="http://dribbble.com">Dribbble</a></li>
