--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,12 @@ layout: default
 		<h1 class="blockHeader-main">{{ page.title-display }}</h1>
 	</header>
 
-	<p class="post-date">{{ page.date | date: "%B %d, %Y" }} &bull; <a href="https://twitter.com/intent/tweet?text={{ page.title | cgi_escape }}+by+%40johndjameson+http%3A%2F%2Fjohndjameson.com{{page.url | cgi_escape}}">Tweet</a></p>
+	<ul class="inlineList">
+		<li class="post-date">{{ page.date | date: "%B %d, %Y" }}</li>
+		<li><a href="https://twitter.com/intent/tweet?text={{ page.title | cgi_escape }}+by+%40johndjameson+http%3A%2F%2Fjohndjameson.com{{page.url | cgi_escape}}">Tweet</a></li>
+	</ul>
+
+	
 	<!-- <p class="post-tagline">{{ page.tagline }}</p> -->
 
 	
