--- a/sass/application.scss
+++ b/sass/application.scss
@@ -10,6 +10,7 @@
 // -------------------------------------
 
 @import "compass";
+
 @import "compass/css3/user-interface";
 
 // -------------------------------------
@@ -46,7 +47,7 @@
 
 // ----- Twilight ----- //
 
-@import "libs/twilight";
+@import "libraries/twilight";
 
 // -------------------------------------
 //   Modules
@@ -57,6 +58,8 @@
 @import "modules/blockHeader";
 
 @import "modules/btn";
+
+@import "modules/inlineList";
 
 @import "modules/logo";
 
