--- a/sass/core/_layout.scss
+++ b/sass/core/_layout.scss
@@ -10,12 +10,13 @@
 // -------------------------------------
 
 .l-row, %l-row {
-  @extend %group;
+  max-width: 700px;
+  // max-width: 32rem;
   padding: 0 20px;
-  padding: 0 rem($base-gutter);
-
-  max-width: 32rem;
+  // padding: 0 rem($base-gutter);
   margin: 0 auto;
+
+  @extend %group;
 }
 
 .l-row--full {
@@ -101,16 +102,12 @@
   }
 
   li {
-    margin-left: 0.75em;
+    margin: 0;
 
     float: left;
 
     @include respond-to(20em) {
       margin-left: 1em;
-    }
-
-    &:first-of-type {
-      margin: 0;
     }
   }
 
@@ -119,7 +116,6 @@
 
     font-weight: normal;
 
-    // color: mix($base-color, $base-background, 75%);
     color: $base-color;
 
     &:hover, &:focus {
@@ -149,25 +145,7 @@
 .l-footer {
   margin-top: rem($base-whitespace);
 
-  ul {
-    padding: 0;
+  @extend %fontSize-aa;
 
-    text-align: center;
-
-    list-style-type: none;
-  }
-
-  li {
-    display: inline-block;
-
-    &::after {
-      content: " \2022";
-
-      color: $base-link-background;
-    }
-
-    &:last-child::after {
-      content: "";
-    }
-  }
+  text-align: center;
 }
