Tweaked blockHeader and Disqus, started documentation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 		<ul class="inlineList">
 			<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
 			<li><a href="http://codepen.io/johndjameson">CodePen</a></li>
-			<li><a href="http://dribbble.com">Dribbble</a></li>
+			<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
 			<li><a href="/feed.xml">RSS</a></li>
 		</ul>
 	</footer>
