--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,20 +15,14 @@ layout: default
 
 	{{ content }}
 
-	<footer>
+	<footer class="l-comments">
 		<h3>Leave a Comment</h3>
 
+		<noscript>
+			<p>Enable JavaScript to view comments.</p>
+		</noscript>
+		
 		<div id="disqus_thread"></div>
-		<script>
-			(function() {
-				var disqus_shortname = 'johndjameson',
-					dsq = document.createElement('script');
-					dsq.type = 'text/javascript'; dsq.async = true;
-					dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-
-				(document.getElementsByTagName('body')[0]).appendChild(dsq);
-			})();
-		</script>
 	</footer>
 
 </article>
