--- a/sass/core/_content.scss
+++ b/sass/core/_content.scss
@@ -62,6 +62,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.25;
 
   color: mix($base-color, $base-background, 90%);
+  // color: $base-color-primary;
 }
 
 h1, .c-h1, %c-h1 {
