New permalinks, some documentation, Google jQuery

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 		</ul>
 	</footer>
 
-	<script src="/js/jquery-1.10.2.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="/js/application.js"></script>
 </body>
 </html>
