blockHeader/l-footer redesign, max font-size lowered

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,13 +36,15 @@
 		</main>
 	</div>
 
-	<footer class="l-footer l-row">
-		<ul class="inlineList">
-			<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-			<li><a href="http://codepen.io/johndjameson">CodePen</a></li>
-			<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
-			<li><a href="/feed.xml">RSS</a></li>
-		</ul>
+	<footer class="l-footer">
+		<div class="l-row">
+			<ul class="inlineList">
+				<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
+				<li><a href="http://codepen.io/johndjameson">CodePen</a></li>
+				<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
+				<li><a href="/feed.xml">RSS</a></li>
+			</ul>
+		</div>
 	</footer>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
