--- a/sass/core/_layout.scss
+++ b/sass/core/_layout.scss
@@ -143,9 +143,13 @@
 // -------------------------------------
 
 .l-footer {
-  margin-top: rem($base-whitespace);
+  ul {
+    display: block;
+    padding: rem($base-whitespace) rem($base-gutter);
+    border-top: rem(4px) solid mix($base-color-primary, $base-background, 85%);
+    margin: rem($base-whitespace) rem(-$base-gutter) 0;
 
-  @extend %fontSize-aa;
-
-  text-align: center;
+    @extend %fontSize-aa;
+    text-align: center;
+  }
 }
