--- a/sass/modules/_blockHeader.scss
+++ b/sass/modules/_blockHeader.scss
@@ -6,17 +6,38 @@
 // *************************************
 
 .blockHeader {
-  padding: rem($base-whitespace) rem($base-whitespace / 2);
-  border: rem(8px) solid mix($base-color-primary, $base-background, 45%);
-  border-top-color: mix($base-color-primary, $base-background, 20%);
-  border-bottom-color: mix($base-color-primary, $base-background, 65%);
-  margin-bottom: rem($base-whitespace);
+  padding: rem($base-whitespace) rem($base-gutter);
+  border-top: rem(4px) solid mix($base-color-primary, $base-background, 85%);
+  border-bottom: rem(4px) solid mix($base-color-primary, $base-background, 85%);
+  margin: 0 rem(-$base-gutter) rem($base-whitespace);
 
-  background-color: $base-link-background;
-  background-color: mix($base-color-primary, $base-background, 32.5%);
+  position: relative;
 
-  :last-child {
+  color: $base-color-primary;
+
+  > :last-child {
   	margin-bottom: 0;
+  }
+
+  &::after {
+    display: block;
+    width: rem(32px);
+    height: rem(32px);
+    margin-top: rem(-16px);
+    margin-left: rem(-16px);
+
+    position: absolute;
+    top: 100%;
+    left: 50%;
+
+    font-size: rem(24px);
+    line-height: rem(32px);
+    text-align: center;
+
+    content: "\2665";
+
+    color: mix($base-color-primary, $base-background, 95%);
+    background-color: $base-background;
   }
 }
 
@@ -50,12 +71,15 @@
   font-weight: bold;
   text-align: center;
 
-  color: $base-color-primary;
+  color: inherit;
 }
 
 .blockHeader-support {
   @extend %fontSize-aa;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  word-spacing: 1px;
   text-align: center;
 
-  color: mix($base-color-primary, $base-link-background, 75%);
+  color: mix($base-color-primary, $base-background, 90%);
 }
