--- a/sass/core/_base.scss
+++ b/sass/core/_base.scss
@@ -36,6 +36,7 @@ body {
 
   color: $base-color;
   background-color: $base-background;
+  // background-image: url(http://www.brewsterwallcovering.com/data/default/images/catalog/original/420-87105.jpg);
 }
 
 ::selection {
