Moved from SCSS to Sass, fresh redesign

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,20 +46,9 @@
 		</header>
 	</div>
 
-	<main class="l-content">
+	<main class="l-main">
 		{{content}}
 	</main>
-
-	<footer class="l-footer">
-		<div class="l-row">
-			<ul class="inlineList">
-				<li><a href="https://twitter.com/johndjameson">Twitter</a></li>
-				<li><a href="http://codepen.io/johndjameson">CodePen</a></li>
-				<li><a href="http://dribbble.com/johndjameson">Dribbble</a></li>
-				<li><a href="/feed.xml">RSS</a></li>
-			</ul>
-		</div>
-	</footer>
 
 </div>
 
